2013-07-13  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-engine.el (c-forward-decl-or-cast-1): Label CASE 13
	and comment it out.  This out-commenting enables certain C++
	declarations to be parsed correctly.

2013-07-13  Eli Zaretskii  <eliz@gnu.org>

	* international/mule.el (define-coding-system): Doc fix.

	* simple.el (default-font-height): Don't call font-info if the
	frame's default font didn't change since the frame was created.
	(Bug#14838)

2013-07-13  Leo Liu  <sdl.web@gmail.com>

	* ido.el (ido-read-file-name): Guard against non-symbol value.

2013-07-13  Fabián Ezequiel Gallina  <fgallina@gnu.org>

	* progmodes/python.el (python-imenu--build-tree): Fix corner case
	in nested defuns.

2013-07-13  Leo Liu  <sdl.web@gmail.com>

	* ido.el (ido-exhibit): Handle ido-enter-matching-directory before
	ido-set-matches call.  (Bug#6852)

2013-07-12  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-percent-literals-beg-re):
	(ruby-syntax-expansion-allowed-p): Support array of symbols, for
	Ruby 2.0.
	(ruby-font-lock-keywords): Distinguish calls to functions with
	module-like names from module references.  Highlight character
	literals.

2013-07-12  Sergio Durigan Junior  <sergiodj@riseup.net>  (tiny change)

	* progmodes/gdb-mi.el (gdb-strip-string-backslash): New function.
	(gdb-send): Handle continued commands.  (Bug#14847)

2013-07-12  Juanma Barranquero  <lekktu@gmail.com>

	* desktop.el (desktop--v2s): Remove unused local variable.
	(desktop-save-buffer): Make defvar-local; adjust docstring.
	(desktop-auto-save-timeout, desktop-owner): Use ignore-errors.
	(desktop-clear, desktop-save-buffer-p): Use string-match-p.

2013-07-12  Andreas Schwab  <schwab@linux-m68k.org>

	* emacs-lisp/map-ynp.el (map-y-or-n-p): Fix last change.

2013-07-12  Eli Zaretskii  <eliz@gnu.org>

	* simple.el (next-line, previous-line): Document TRY-VSCROLL and ARG.
	(Bug#14842)

2013-07-12  Glenn Morris  <rgm@gnu.org>

	* doc-view.el: Require cl-lib at runtime too.